Refactor project structure (#3)

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
 dist/
+dist_test/
 downloads/
 eggs/
 .eggs/
@@ -16,48 +21,83 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-PIPFILE.lock
+MANIFEST
 
-# Virtual environments
-.venv/
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+__pypackages__/
+
+# Environments
+.env*
+.venv*
 venv/
-ENV/
 env/
-.venv313/
+ENV/
+env.bak/
+venv.bak/
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# IDEs
+.idea/
+.vscode/
+.run/
+
+# Sqlite files
+*.sqlite3
+*.sqlite3-journal
+db.sqlite3
 
 # Django
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+media/
+staticfiles/
+static_root/
 
-# Static files
-/static/
-/staticfiles/
-/media/
+# Pytest results
+*results.xml
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# CLI token file
+.qrcode_token
+
+# Misc
 .DS_Store
-
-# Environment variables
-.env
-.env.local
-
-# Testing
-.coverage
-.pytest_cache/
-htmlcov/
-
-# Migrations (optional - uncomment if you want to ignore migrations)
-# */migrations/*.py
-# !*/migrations/__init__.py
+release-notes.md
+release_notes.md
