`drf-spectacular` package

--- a/admin/requirements/requirements.in
+++ b/admin/requirements/requirements.in
@@ -1,4 +1,5 @@
 django
-djangorestframework
+djangorestframework     # Django Rest Framework (DRF)
+drf-spectacular         # OpenAPI docs, nicer than standard DRF
 pyjwt
 typer                   # CLI app
