--- a/admin/requirements/requirements-dev.txt
+++ b/admin/requirements/requirements-dev.txt
@@ -2,6 +2,11 @@ asgiref==3.11.0
     # via
     #   -r requirements.txt
     #   django
+attrs==25.4.0
+    # via
+    #   -r requirements.txt
+    #   jsonschema
+    #   referencing
 black==25.12.0
     # via -r requirements-dev.in
 build==1.3.0
@@ -30,6 +35,7 @@ django==6.0
     #   django-stubs
     #   django-stubs-ext
     #   djangorestframework
+    #   drf-spectacular
 django-stubs==5.2.8
     # via
     #   -r requirements-dev.in
@@ -37,9 +43,13 @@ django-stubs==5.2.8
 django-stubs-ext==5.2.8
     # via django-stubs
 djangorestframework==3.16.1
-    # via -r requirements.txt
+    # via
+    #   -r requirements.txt
+    #   drf-spectacular
 djangorestframework-stubs==3.16.6
     # via -r requirements-dev.in
+drf-spectacular==0.29.0
+    # via -r requirements.txt
 factory-boy==3.3.3
     # via -r requirements-dev.in
 faker==38.2.0
@@ -54,10 +64,22 @@ flake8-pyproject==1.2.4
     # via -r requirements-dev.in
 idna==3.11
     # via requests
+inflection==0.5.1
+    # via
+    #   -r requirements.txt
+    #   drf-spectacular
 iniconfig==2.3.0
     # via pytest
 isort==7.0.0
     # via -r requirements-dev.in
+jsonschema==4.25.1
+    # via
+    #   -r requirements.txt
+    #   drf-spectacular
+jsonschema-specifications==2025.9.1
+    # via
+    #   -r requirements.txt
+    #   jsonschema
 librt==0.7.3
     # via mypy
 markdown-it-py==4.0.0
@@ -119,6 +141,15 @@ pytest-django==4.11.1
     # via -r requirements-dev.in
 pytokens==0.3.0
     # via black
+pyyaml==6.0.3
+    # via
+    #   -r requirements.txt
+    #   drf-spectacular
+referencing==0.37.0
+    # via
+    #   -r requirements.txt
+    #   jsonschema
+    #   jsonschema-specifications
 requests==2.32.5
     # via djangorestframework-stubs
 rich==14.2.0
@@ -126,6 +157,11 @@ rich==14.2.0
     #   -r requirements.txt
     #   typer
     #   typer-invoke
+rpds-py==0.30.0
+    # via
+    #   -r requirements.txt
+    #   jsonschema
+    #   referencing
 shellingham==1.5.4
     # via
     #   -r requirements.txt
@@ -159,6 +195,10 @@ tzdata==2025.3
     #   -r requirements.txt
     #   django
     #   faker
+uritemplate==4.2.0
+    # via
+    #   -r requirements.txt
+    #   drf-spectacular
 urllib3==2.6.2
     # via
     #   requests
