--- a/admin/requirements/requirements.txt
+++ b/admin/requirements/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.11.0
     # via django
+attrs==25.4.0
+    # via
+    #   jsonschema
+    #   referencing
 click==8.3.1
     # via typer
 colorama==0.4.6
@@ -8,8 +12,19 @@ django==6.0
     # via
     #   -r requirements.in
     #   djangorestframework
+    #   drf-spectacular
 djangorestframework==3.16.1
+    # via
+    #   -r requirements.in
+    #   drf-spectacular
+drf-spectacular==0.29.0
     # via -r requirements.in
+inflection==0.5.1
+    # via drf-spectacular
+jsonschema==4.25.1
+    # via drf-spectacular
+jsonschema-specifications==2025.9.1
+    # via jsonschema
 markdown-it-py==4.0.0
     # via rich
 mdurl==0.1.2
@@ -18,8 +33,18 @@ pygments==2.19.2
     # via rich
 pyjwt==2.10.1
     # via -r requirements.in
+pyyaml==6.0.3
+    # via drf-spectacular
+referencing==0.37.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 rich==14.2.0
     # via typer
+rpds-py==0.30.0
+    # via
+    #   jsonschema
+    #   referencing
 shellingham==1.5.4
     # via typer
 sqlparse==0.5.4
@@ -30,3 +55,5 @@ typing-extensions==4.15.0
     # via typer
 tzdata==2025.3
     # via django
+uritemplate==4.2.0
+    # via drf-spectacular
