--- a/admin/requirements/requirements-dev.txt
+++ b/admin/requirements/requirements-dev.txt
@@ -9,6 +9,17 @@ attrs==25.4.0
     #   referencing
 black==25.12.0
     # via -r requirements-dev.in
+boto3==1.42.9
+    # via -r requirements.txt
+boto3-stubs[s3]==1.42.9
+    # via -r requirements-dev.in
+botocore==1.42.9
+    # via
+    #   -r requirements.txt
+    #   boto3
+    #   s3transfer
+botocore-stubs==1.42.9
+    # via boto3-stubs
 build==1.3.0
     # via pip-tools
 certifi==2025.11.12
@@ -72,6 +83,11 @@ iniconfig==2.3.0
     # via pytest
 isort==7.0.0
     # via -r requirements-dev.in
+jmespath==1.0.1
+    # via
+    #   -r requirements.txt
+    #   boto3
+    #   botocore
 jsonschema==4.25.1
     # via
     #   -r requirements.txt
@@ -94,6 +110,8 @@ mdurl==0.1.2
     #   markdown-it-py
 mypy==1.19.0
     # via -r requirements-dev.in
+mypy-boto3-s3==1.42.3
+    # via boto3-stubs
 mypy-extensions==1.1.0
     # via
     #   black
@@ -139,6 +157,10 @@ pytest-cov==7.0.0
     # via -r requirements-dev.in
 pytest-django==4.11.1
     # via -r requirements-dev.in
+python-dateutil==2.9.0.post0
+    # via
+    #   -r requirements.txt
+    #   botocore
 python-dotenv==1.2.1
     # via -r requirements.txt
 pytokens==0.3.0
@@ -164,10 +186,18 @@ rpds-py==0.30.0
     #   -r requirements.txt
     #   jsonschema
     #   referencing
+s3transfer==0.16.0
+    # via
+    #   -r requirements.txt
+    #   boto3
 shellingham==1.5.4
     # via
     #   -r requirements.txt
     #   typer
+six==1.17.0
+    # via
+    #   -r requirements.txt
+    #   python-dateutil
 sqlparse==0.5.4
     # via
     #   -r requirements.txt
@@ -178,12 +208,16 @@ typer==0.20.0
     #   typer-invoke
 typer-invoke==0.4.0
     # via -r requirements-dev.in
+types-awscrt==0.30.0
+    # via botocore-stubs
 types-pyyaml==6.0.12.20250915
     # via
     #   django-stubs
     #   djangorestframework-stubs
 types-requests==2.32.4.20250913
     # via djangorestframework-stubs
+types-s3transfer==0.16.0
+    # via boto3-stubs
 typing-extensions==4.15.0
     # via
     #   -r requirements.txt
@@ -203,6 +237,8 @@ uritemplate==4.2.0
     #   drf-spectacular
 urllib3==2.6.2
     # via
+    #   -r requirements.txt
+    #   botocore
     #   requests
     #   types-requests
 wheel==0.45.1
