--- a/admin/requirements/requirements.txt
+++ b/admin/requirements/requirements.txt
@@ -4,6 +4,12 @@ attrs==25.4.0
     # via
     #   jsonschema
     #   referencing
+boto3==1.42.9
+    # via -r requirements.in
+botocore==1.42.9
+    # via
+    #   boto3
+    #   s3transfer
 click==8.3.1
     # via typer
 colorama==0.4.6
@@ -21,6 +27,10 @@ drf-spectacular==0.29.0
     # via -r requirements.in
 inflection==0.5.1
     # via drf-spectacular
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 jsonschema==4.25.1
     # via drf-spectacular
 jsonschema-specifications==2025.9.1
@@ -33,6 +43,8 @@ pygments==2.19.2
     # via rich
 pyjwt==2.10.1
     # via -r requirements.in
+python-dateutil==2.9.0.post0
+    # via botocore
 python-dotenv==1.2.1
     # via -r requirements.in
 pyyaml==6.0.3
@@ -47,8 +59,12 @@ rpds-py==0.30.0
     # via
     #   jsonschema
     #   referencing
+s3transfer==0.16.0
+    # via boto3
 shellingham==1.5.4
     # via typer
+six==1.17.0
+    # via python-dateutil
 sqlparse==0.5.4
     # via django
 typer==0.20.0
@@ -59,3 +75,5 @@ tzdata==2025.3
     # via django
 uritemplate==4.2.0
     # via drf-spectacular
+urllib3==2.6.2
+    # via botocore
