--- a/admin/requirements/requirements.txt
+++ b/admin/requirements/requirements.txt
@@ -17,8 +17,11 @@ colorama==0.4.6
 django==6.0
     # via
     #   -r requirements.in
+    #   django-jazzmin
     #   djangorestframework
     #   drf-spectacular
+django-jazzmin==3.0.1
+    # via -r requirements.in
 djangorestframework==3.16.1
     # via
     #   -r requirements.in
