--- a/admin/requirements/requirements-dev.txt
+++ b/admin/requirements/requirements-dev.txt
@@ -43,10 +43,13 @@ coverage[toml]==7.13.0
 django==6.0
     # via
     #   -r requirements.txt
+    #   django-jazzmin
     #   django-stubs
     #   django-stubs-ext
     #   djangorestframework
     #   drf-spectacular
+django-jazzmin==3.0.1
+    # via -r requirements.txt
 django-stubs==5.2.8
     # via
     #   -r requirements-dev.in
