--- a/admin/requirements/requirements-dev.txt
+++ b/admin/requirements/requirements-dev.txt
@@ -11,7 +11,7 @@ black==25.12.0
     # via -r requirements-dev.in
 boto3==1.42.9
     # via -r requirements.txt
-boto3-stubs[s3]==1.42.9
+boto3-stubs[s3,ses]==1.42.9
     # via -r requirements-dev.in
 botocore==1.42.9
     # via
@@ -114,6 +114,8 @@ mdurl==0.1.2
 mypy==1.19.0
     # via -r requirements-dev.in
 mypy-boto3-s3==1.42.3
+    # via boto3-stubs
+mypy-boto3-ses==1.42.3
     # via boto3-stubs
 mypy-extensions==1.1.0
     # via
