--- a/admin/requirements/requirements.in
+++ b/admin/requirements/requirements.in
@@ -1,8 +1,8 @@
 boto3
 django
 django-jazzmin          # Admin site theme
-djangorestframework     # Django Rest Framework (DRF)
-drf-spectacular         # OpenAPI docs, nicer than standard DRF
+django-ninja            # Django Ninja API framework
+pydantic>=2.0           # Pydantic v2 for schemas
 pyjwt
 python-dotenv
 typer                   # CLI app
