--- a/admin/requirements/requirements.txt
+++ b/admin/requirements/requirements.txt
@@ -1,9 +1,7 @@
+annotated-types==0.7.0
+    # via pydantic
 asgiref==3.11.0
     # via django
-attrs==25.4.0
-    # via
-    #   jsonschema
-    #   referencing
 boto3==1.42.9
     # via -r requirements.in
 botocore==1.42.9
@@ -18,30 +16,25 @@ django==6.0
     # via
     #   -r requirements.in
     #   django-jazzmin
-    #   djangorestframework
-    #   drf-spectacular
+    #   django-ninja
 django-jazzmin==3.0.1
     # via -r requirements.in
-djangorestframework==3.16.1
-    # via
-    #   -r requirements.in
-    #   drf-spectacular
-drf-spectacular==0.29.0
+django-ninja==1.3.0
     # via -r requirements.in
-inflection==0.5.1
-    # via drf-spectacular
 jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-jsonschema==4.25.1
-    # via drf-spectacular
-jsonschema-specifications==2025.9.1
-    # via jsonschema
 markdown-it-py==4.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
+pydantic==2.10.5
+    # via
+    #   -r requirements.in
+    #   django-ninja
+pydantic-core==2.27.2
+    # via pydantic
 pygments==2.19.2
     # via rich
 pyjwt==2.10.1
@@ -50,18 +43,8 @@ python-dateutil==2.9.0.post0
     # via botocore
 python-dotenv==1.2.1
     # via -r requirements.in
-pyyaml==6.0.3
-    # via drf-spectacular
-referencing==0.37.0
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
 rich==14.2.0
     # via typer
-rpds-py==0.30.0
-    # via
-    #   jsonschema
-    #   referencing
 s3transfer==0.16.0
     # via boto3
 shellingham==1.5.4
@@ -73,10 +56,11 @@ sqlparse==0.5.4
 typer==0.20.0
     # via -r requirements.in
 typing-extensions==4.15.0
-    # via typer
+    # via
+    #   pydantic
+    #   pydantic-core
+    #   typer
 tzdata==2025.3
     # via django
-uritemplate==4.2.0
-    # via drf-spectacular
 urllib3==2.6.2
     # via botocore
