--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
 check_untyped_defs = true
-plugins = ['mypy_django_plugin.main', 'mypy_drf_plugin.main']
+plugins = ['mypy_django_plugin.main']
 exclude = [
     'migrations',
     '.venv.*',
