--- a/admin/requirements/requirements.in
+++ b/admin/requirements/requirements.in
@@ -2,7 +2,7 @@ boto3
 django
 django-jazzmin          # Admin site theme
 django-ninja            # Django Ninja API framework
+django-ninja-jwt        # JWT authentication for Django Ninja
 pydantic>=2.0           # Pydantic v2 for schemas
-pyjwt
 python-dotenv
 typer                   # CLI app
