--- a/admin/requirements/requirements-dev.txt
+++ b/admin/requirements/requirements-dev.txt
@@ -6,6 +6,7 @@ asgiref==3.11.0
     # via
     #   -r requirements.txt
     #   django
+    #   django-ninja-extra
 black==25.12.0
     # via -r requirements-dev.in
 boto3==1.42.15
@@ -21,6 +22,10 @@ botocore-stubs==1.42.15
     # via boto3-stubs
 build==1.3.0
     # via pip-tools
+cffi==2.0.0
+    # via
+    #   -r requirements.txt
+    #   cryptography
 click==8.3.1
     # via
     #   -r requirements.txt
@@ -33,18 +38,36 @@ colorama==0.4.6
     #   build
     #   click
     #   pytest
+contextlib2==21.6.0
+    # via
+    #   -r requirements.txt
+    #   django-ninja-extra
 coverage[toml]==7.13.0
     # via pytest-cov
+cryptography==46.0.3
+    # via
+    #   -r requirements.txt
+    #   pyjwt
 django==6.0
     # via
     #   -r requirements.txt
     #   django-jazzmin
     #   django-ninja
+    #   django-ninja-extra
+    #   django-ninja-jwt
     #   django-stubs
     #   django-stubs-ext
 django-jazzmin==3.0.1
     # via -r requirements.txt
 django-ninja==1.5.1
+    # via
+    #   -r requirements.txt
+    #   django-ninja-extra
+django-ninja-extra==0.30.8
+    # via
+    #   -r requirements.txt
+    #   django-ninja-jwt
+django-ninja-jwt==5.4.2
     # via -r requirements.txt
 django-stubs==5.2.8
     # via -r requirements-dev.in
@@ -64,6 +87,10 @@ flake8-pyproject==1.2.4
     # via -r requirements-dev.in
 iniconfig==2.3.0
     # via pytest
+injector==0.23.0
+    # via
+    #   -r requirements.txt
+    #   django-ninja-extra
 isort==7.0.0
     # via -r requirements-dev.in
 jmespath==1.0.1
@@ -112,14 +139,23 @@ pluggy==1.6.0
     #   pytest-cov
 pycodestyle==2.14.0
     # via flake8
+pycparser==2.23
+    # via
+    #   -r requirements.txt
+    #   cffi
 pydantic==2.12.5
     # via
     #   -r requirements.txt
     #   django-ninja
+    #   pydantic-settings
 pydantic-core==2.41.5
     # via
     #   -r requirements.txt
     #   pydantic
+pydantic-settings==2.12.0
+    # via
+    #   -r requirements.txt
+    #   django-ninja-jwt
 pyflakes==3.4.0
     # via flake8
 pygments==2.19.2
@@ -127,8 +163,10 @@ pygments==2.19.2
     #   -r requirements.txt
     #   pytest
     #   rich
-pyjwt==2.10.1
-    # via -r requirements.txt
+pyjwt[crypto]==2.10.1
+    # via
+    #   -r requirements.txt
+    #   django-ninja-jwt
 pyproject-hooks==1.2.0
     # via
     #   build
@@ -147,7 +185,9 @@ python-dateutil==2.9.0.post0
     #   -r requirements.txt
     #   botocore
 python-dotenv==1.2.1
-    # via -r requirements.txt
+    # via
+    #   -r requirements.txt
+    #   pydantic-settings
 pytokens==0.3.0
     # via black
 rich==14.2.0
@@ -197,6 +237,7 @@ typing-inspection==0.4.2
     # via
     #   -r requirements.txt
     #   pydantic
+    #   pydantic-settings
 tzdata==2025.3
     # via
     #   -r requirements.txt
