--- a/admin/requirements/requirements.in
+++ b/admin/requirements/requirements.in
@@ -4,5 +4,5 @@ django-jazzmin          # Admin site theme
 django-ninja            # Django Ninja API framework
 django-ninja-jwt        # JWT authentication for Django Ninja
 pydantic>=2.0           # Pydantic v2 for schemas
-python-dotenv
+python-dotenv           # Environment variables
 typer                   # CLI app
