--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,9 @@ exclude = [
 django_settings_module = 'config.settings'
 
 [[tool.mypy.overrides]]
-module = []
+module = [
+    'ninja_jwt.*',
+]
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
