--- a/admin/requirements/requirements-dev.txt
+++ b/admin/requirements/requirements-dev.txt
@@ -1,31 +1,31 @@
+annotated-types==0.7.0
+    # via
+    #   -r requirements.txt
+    #   pydantic
 asgiref==3.11.0
     # via
     #   -r requirements.txt
     #   django
-attrs==25.4.0
-    # via
-    #   -r requirements.txt
-    #   jsonschema
-    #   referencing
+    #   django-ninja-extra
 black==25.12.0
     # via -r requirements-dev.in
-boto3==1.42.9
+boto3==1.42.15
     # via -r requirements.txt
-boto3-stubs[s3,ses]==1.42.9
+boto3-stubs[s3,ses]==1.42.15
     # via -r requirements-dev.in
-botocore==1.42.9
+botocore==1.42.15
     # via
     #   -r requirements.txt
     #   boto3
     #   s3transfer
-botocore-stubs==1.42.9
+botocore-stubs==1.42.15
     # via boto3-stubs
 build==1.3.0
     # via pip-tools
-certifi==2025.11.12
-    # via requests
-charset-normalizer==3.4.4
-    # via requests
+cffi==2.0.0
+    # via
+    #   -r requirements.txt
+    #   cryptography
 click==8.3.1
     # via
     #   -r requirements.txt
@@ -38,35 +38,44 @@ colorama==0.4.6
     #   build
     #   click
     #   pytest
+contextlib2==21.6.0
+    # via
+    #   -r requirements.txt
+    #   django-ninja-extra
 coverage[toml]==7.13.0
     # via pytest-cov
+cryptography==46.0.3
+    # via
+    #   -r requirements.txt
+    #   pyjwt
 django==6.0
     # via
     #   -r requirements.txt
     #   django-jazzmin
+    #   django-ninja
+    #   django-ninja-extra
+    #   django-ninja-jwt
     #   django-stubs
     #   django-stubs-ext
-    #   djangorestframework
-    #   drf-spectacular
 django-jazzmin==3.0.1
     # via -r requirements.txt
-django-stubs==5.2.8
-    # via
-    #   -r requirements-dev.in
-    #   djangorestframework-stubs
-django-stubs-ext==5.2.8
-    # via django-stubs
-djangorestframework==3.16.1
+django-ninja==1.5.1
     # via
     #   -r requirements.txt
-    #   drf-spectacular
-djangorestframework-stubs==3.16.6
-    # via -r requirements-dev.in
-drf-spectacular==0.29.0
+    #   django-ninja-extra
+django-ninja-extra==0.30.8
+    # via
+    #   -r requirements.txt
+    #   django-ninja-jwt
+django-ninja-jwt==5.4.2
     # via -r requirements.txt
+django-stubs==5.2.8
+    # via -r requirements-dev.in
+django-stubs-ext==5.2.8
+    # via django-stubs
 factory-boy==3.3.3
     # via -r requirements-dev.in
-faker==38.2.0
+faker==39.0.0
     # via
     #   -r requirements-dev.in
     #   factory-boy
@@ -76,14 +85,12 @@ flake8==7.3.0
     #   flake8-pyproject
 flake8-pyproject==1.2.4
     # via -r requirements-dev.in
-idna==3.11
-    # via requests
-inflection==0.5.1
-    # via
-    #   -r requirements.txt
-    #   drf-spectacular
 iniconfig==2.3.0
     # via pytest
+injector==0.23.0
+    # via
+    #   -r requirements.txt
+    #   django-ninja-extra
 isort==7.0.0
     # via -r requirements-dev.in
 jmespath==1.0.1
@@ -91,15 +98,7 @@ jmespath==1.0.1
     #   -r requirements.txt
     #   boto3
     #   botocore
-jsonschema==4.25.1
-    # via
-    #   -r requirements.txt
-    #   drf-spectacular
-jsonschema-specifications==2025.9.1
-    # via
-    #   -r requirements.txt
-    #   jsonschema
-librt==0.7.3
+librt==0.7.4
     # via mypy
 markdown-it-py==4.0.0
     # via
@@ -111,9 +110,9 @@ mdurl==0.1.2
     # via
     #   -r requirements.txt
     #   markdown-it-py
-mypy==1.19.0
+mypy==1.19.1
     # via -r requirements-dev.in
-mypy-boto3-s3==1.42.3
+mypy-boto3-s3==1.42.10
     # via boto3-stubs
 mypy-boto3-ses==1.42.3
     # via boto3-stubs
@@ -140,6 +139,23 @@ pluggy==1.6.0
     #   pytest-cov
 pycodestyle==2.14.0
     # via flake8
+pycparser==2.23
+    # via
+    #   -r requirements.txt
+    #   cffi
+pydantic==2.12.5
+    # via
+    #   -r requirements.txt
+    #   django-ninja
+    #   pydantic-settings
+pydantic-core==2.41.5
+    # via
+    #   -r requirements.txt
+    #   pydantic
+pydantic-settings==2.12.0
+    # via
+    #   -r requirements.txt
+    #   django-ninja-jwt
 pyflakes==3.4.0
     # via flake8
 pygments==2.19.2
@@ -147,8 +163,10 @@ pygments==2.19.2
     #   -r requirements.txt
     #   pytest
     #   rich
-pyjwt==2.10.1
-    # via -r requirements.txt
+pyjwt[crypto]==2.10.1
+    # via
+    #   -r requirements.txt
+    #   django-ninja-jwt
 pyproject-hooks==1.2.0
     # via
     #   build
@@ -167,30 +185,16 @@ python-dateutil==2.9.0.post0
     #   -r requirements.txt
     #   botocore
 python-dotenv==1.2.1
-    # via -r requirements.txt
+    # via
+    #   -r requirements.txt
+    #   pydantic-settings
 pytokens==0.3.0
     # via black
-pyyaml==6.0.3
-    # via
-    #   -r requirements.txt
-    #   drf-spectacular
-referencing==0.37.0
-    # via
-    #   -r requirements.txt
-    #   jsonschema
-    #   jsonschema-specifications
-requests==2.32.5
-    # via djangorestframework-stubs
 rich==14.2.0
     # via
     #   -r requirements.txt
     #   typer
     #   typer-invoke
-rpds-py==0.30.0
-    # via
-    #   -r requirements.txt
-    #   jsonschema
-    #   referencing
 s3transfer==0.16.0
     # via
     #   -r requirements.txt
@@ -203,11 +207,11 @@ six==1.17.0
     # via
     #   -r requirements.txt
     #   python-dateutil
-sqlparse==0.5.4
+sqlparse==0.5.5
     # via
     #   -r requirements.txt
     #   django
-typer==0.20.0
+typer==0.20.1
     # via
     #   -r requirements.txt
     #   typer-invoke
@@ -216,11 +220,7 @@ typer-invoke==0.4.0
 types-awscrt==0.30.0
     # via botocore-stubs
 types-pyyaml==6.0.12.20250915
-    # via
-    #   django-stubs
-    #   djangorestframework-stubs
-types-requests==2.32.4.20250913
-    # via djangorestframework-stubs
+    # via django-stubs
 types-s3transfer==0.16.0
     # via boto3-stubs
 typing-extensions==4.15.0
@@ -228,24 +228,25 @@ typing-extensions==4.15.0
     #   -r requirements.txt
     #   django-stubs
     #   django-stubs-ext
-    #   djangorestframework-stubs
     #   mypy
+    #   pydantic
+    #   pydantic-core
     #   typer
+    #   typing-inspection
+typing-inspection==0.4.2
+    # via
+    #   -r requirements.txt
+    #   pydantic
+    #   pydantic-settings
 tzdata==2025.3
     # via
     #   -r requirements.txt
     #   django
     #   faker
-uritemplate==4.2.0
-    # via
-    #   -r requirements.txt
-    #   drf-spectacular
 urllib3==2.6.2
     # via
     #   -r requirements.txt
     #   botocore
-    #   requests
-    #   types-requests
 wheel==0.45.1
     # via pip-tools
 
