--- a/admin/requirements/requirements.txt
+++ b/admin/requirements/requirements.txt
@@ -1,26 +1,44 @@
 annotated-types==0.7.0
     # via pydantic
 asgiref==3.11.0
-    # via django
-boto3==1.42.9
+    # via
+    #   django
+    #   django-ninja-extra
+boto3==1.42.15
     # via -r requirements.in
-botocore==1.42.9
+botocore==1.42.15
     # via
     #   boto3
     #   s3transfer
+cffi==2.0.0
+    # via cryptography
 click==8.3.1
     # via typer
 colorama==0.4.6
     # via click
+contextlib2==21.6.0
+    # via django-ninja-extra
+cryptography==46.0.3
+    # via pyjwt
 django==6.0
     # via
     #   -r requirements.in
     #   django-jazzmin
     #   django-ninja
+    #   django-ninja-extra
+    #   django-ninja-jwt
 django-jazzmin==3.0.1
     # via -r requirements.in
-django-ninja==1.3.0
+django-ninja==1.5.1
+    # via
+    #   -r requirements.in
+    #   django-ninja-extra
+django-ninja-extra==0.30.8
+    # via django-ninja-jwt
+django-ninja-jwt==5.4.2
     # via -r requirements.in
+injector==0.23.0
+    # via django-ninja-extra
 jmespath==1.0.1
     # via
     #   boto3
@@ -29,20 +47,27 @@ markdown-it-py==4.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
-pydantic==2.10.5
+pycparser==2.23
+    # via cffi
+pydantic==2.12.5
     # via
     #   -r requirements.in
     #   django-ninja
-pydantic-core==2.27.2
+    #   pydantic-settings
+pydantic-core==2.41.5
     # via pydantic
+pydantic-settings==2.12.0
+    # via django-ninja-jwt
 pygments==2.19.2
     # via rich
-pyjwt==2.10.1
-    # via -r requirements.in
+pyjwt[crypto]==2.10.1
+    # via django-ninja-jwt
 python-dateutil==2.9.0.post0
     # via botocore
 python-dotenv==1.2.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   pydantic-settings
 rich==14.2.0
     # via typer
 s3transfer==0.16.0
@@ -51,15 +76,20 @@ shellingham==1.5.4
     # via typer
 six==1.17.0
     # via python-dateutil
-sqlparse==0.5.4
+sqlparse==0.5.5
     # via django
-typer==0.20.0
+typer==0.20.1
     # via -r requirements.in
 typing-extensions==4.15.0
     # via
     #   pydantic
     #   pydantic-core
     #   typer
+    #   typing-inspection
+typing-inspection==0.4.2
+    # via
+    #   pydantic
+    #   pydantic-settings
 tzdata==2025.3
     # via django
 urllib3==2.6.2
